--- a/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
@@ -495,10 +495,17 @@
         }
       ],
       "source": [
-        "model = torch.load(f'/content/Multimodal-Sentiment-Analysis/src/models/{FILE_NAME}.pt').to(device)\n",
+        "model = torch.load(\n",
+        "    f\"/content/Multimodal-Sentiment-Analysis/src/models/{FILE_NAME}.pt\"\n",
+        ").to(device)\n",
         "\n",
-        "test(model, test_data, 'affect', is_packed=True,\n",
-        "     criterion=torch.nn.L1Loss(), task=\"posneg-classification\", no_robust=True)"
+        "test(\n",
+        "    model,\n",
+        "    test_data,\n",
+        "    is_packed=True,\n",
+        "    criterion=torch.nn.L1Loss(),\n",
+        "    task=\"posneg-classification\"\n",
+        ")\n"
       ]
     }
   ],
