--- a/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
@@ -377,10 +377,15 @@
         }
       ],
       "source": [
-        "model = torch.load(f'/content/models/{OUTPUT_MODEL_FILE_NAME}.pt').to(device)\n",
+        "model = torch.load(f\"/content/models/{OUTPUT_MODEL_FILE_NAME}.pt\").to(device)\n",
         "\n",
-        "test(model, test_data, 'affect', is_packed=True,\n",
-        "     criterion=torch.nn.L1Loss(), task=\"posneg-classification\")"
+        "test(\n",
+        "    model,\n",
+        "    test_data,\n",
+        "    is_packed=True,\n",
+        "    criterion=torch.nn.L1Loss(),\n",
+        "    task=\"posneg-classification\",\n",
+        ")\n"
       ]
     }
   ],
