--- a/src/notebooks/MOSI/Tensor_Fusion.ipynb
+++ b/src/notebooks/MOSI/Tensor_Fusion.ipynb
@@ -1009,10 +1009,15 @@
         }
       ],
       "source": [
-        "model = torch.load(f'/content/MOSI_Tensor_Fusion.pt').to(device)\n",
+        "model = torch.load(f\"/content/MOSI_Tensor_Fusion.pt\").to(device)\n",
         "\n",
-        "test(model, test_dataloaders_all=testdata, dataset='mosi',\n",
-        "     is_packed=True, criterion=torch.nn.L1Loss(), task='posneg-classification')"
+        "test(\n",
+        "    model,\n",
+        "    test_dataloaders_all=testdata,\n",
+        "    is_packed=True,\n",
+        "    criterion=torch.nn.L1Loss(),\n",
+        "    task=\"posneg-classification\",\n",
+        ")\n"
       ]
     }
   ],
