--- a/src/notebooks/MOSI/Unimodal.ipynb
+++ b/src/notebooks/MOSI/Unimodal.ipynb
@@ -283,11 +283,21 @@
       },
       "outputs": [],
       "source": [
-        "encoder = torch.load(f'/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_encoder.pt').to(device)\n",
-        "head = torch.load(f'/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_head.pt').to(device)\n",
+        "encoder = torch.load(\n",
+        "    f\"/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_encoder.pt\"\n",
+        ").to(device)\n",
+        "head = torch.load(\n",
+        "    f\"/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_head.pt\"\n",
+        ").to(device)\n",
         "\n",
-        "test(encoder, head, testdata, 'affect', criterion=torch.nn.L1Loss(),\n",
-        "     task=\"posneg-classification\", modalnum=modality_num, no_robust=True)"
+        "test(\n",
+        "    encoder,\n",
+        "    head,\n",
+        "    testdata,\n",
+        "    criterion=torch.nn.L1Loss(),\n",
+        "    task=\"posneg-classification\",\n",
+        "    modalnum=modality_num,\n",
+        ")"
       ]
     }
   ],
