Add Meld Loader

--- a/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
@@ -96,7 +96,6 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
         "import sys\n",
         "import torch\n",
         "import numpy as np\n",
@@ -177,10 +176,8 @@
         }
       ],
       "source": [
-        "encoders = [Identity().to(device), Identity().to(\n",
-        "    device), Identity().to(device)]\n",
-        "head = Sequential(Transformer(325, 300).to(\n",
-        "    device), MLP(300, 128, 1)).to(device)\n",
+        "encoders = [Identity().to(device), Identity().to(device), Identity().to(device)]\n",
+        "head = Sequential(Transformer(325, 300).to(device), MLP(300, 128, 1)).to(device)\n",
         "fusion = ConcatEarly().to(device)"
       ]
     },
@@ -284,13 +281,24 @@
         }
       ],
       "source": [
-        "OUTPUT_MODEL_FILE_NAME = 'mosi_eft_r0'\n",
+        "OUTPUT_MODEL_FILE_NAME = \"MOSI_Late_Fusion_Transformer\"\n",
         "\n",
         "train_losses, valid_losses = train(\n",
-        "    encoders, fusion, head, train_data, valid_data, 100, task=\"regression\", optimtype=torch.optim.AdamW,\n",
-        "    is_packed=True, early_stop=True, lr=1e-4,\n",
-        "    save=f'/content/{OUTPUT_MODEL_FILE_NAME}.pt', weight_decay=0.01, objective=torch.nn.L1Loss()\n",
-        ")"
+        "    encoders,\n",
+        "    fusion,\n",
+        "    head,\n",
+        "    train_data,\n",
+        "    valid_data,\n",
+        "    100,\n",
+        "    task=\"regression\",\n",
+        "    optimtype=torch.optim.AdamW,\n",
+        "    is_packed=True,\n",
+        "    early_stop=True,\n",
+        "    lr=1e-4,\n",
+        "    save=f\"/content/{OUTPUT_MODEL_FILE_NAME}.pt\",\n",
+        "    weight_decay=0.01,\n",
+        "    objective=torch.nn.L1Loss(),\n",
+        ")\n"
       ]
     },
     {
