--- a/src/notebooks/MOSI/Tensor_Fusion.ipynb
+++ b/src/notebooks/MOSI/Tensor_Fusion.ipynb
@@ -240,13 +240,15 @@
       },
       "outputs": [],
       "source": [
-        "encoders = [GRUWithLinear(35, 64, 4, dropout=True, has_padding=True).to(device),\n",
-        "            GRUWithLinear(74, 128, 19, dropout=True, has_padding=True).to(device),\n",
-        "            GRUWithLinear(300, 512, 79, dropout=True, has_padding=True).to(device)]\n",
+        "encoders = [\n",
+        "    GRUWithLinear(35, 64, 4, dropout=True, has_padding=True).to(device),\n",
+        "    GRUWithLinear(74, 128, 19, dropout=True, has_padding=True).to(device),\n",
+        "    GRUWithLinear(300, 512, 79, dropout=True, has_padding=True).to(device),\n",
+        "]\n",
         "\n",
         "head = MLP(8000, 512, 1).to(device)\n",
         "\n",
-        "fusion = TensorFusion().to(device)"
+        "fusion = TensorFusion().to(device)\n"
       ]
     },
     {
@@ -904,12 +906,21 @@
       ],
       "source": [
         "train_losses, valid_losses = train(\n",
-        "    encoders, fusion, head, traindata, validdata, 150,\n",
-        "    task=\"regression\", optimtype=torch.optim.AdamW,\n",
-        "    early_stop=False, is_packed=True, lr=1e-3,\n",
-        "    save=f'/content/{OUTPUT_MODEL_FILE_NAME}.pt',\n",
-        "    weight_decay=0.01, objective=torch.nn.L1Loss()\n",
-        ")"
+        "    encoders,\n",
+        "    fusion,\n",
+        "    head,\n",
+        "    traindata,\n",
+        "    validdata,\n",
+        "    150,\n",
+        "    task=\"regression\",\n",
+        "    optimtype=torch.optim.AdamW,\n",
+        "    early_stop=False,\n",
+        "    is_packed=True,\n",
+        "    lr=1e-3,\n",
+        "    save=f\"/content/{OUTPUT_MODEL_FILE_NAME}.pt\",\n",
+        "    weight_decay=0.01,\n",
+        "    objective=torch.nn.L1Loss(),\n",
+        ")\n"
       ]
     },
     {
