--- a/src/notebooks/MOSI/Unimodal.ipynb
+++ b/src/notebooks/MOSI/Unimodal.ipynb
@@ -115,11 +115,8 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
         "import sys\n",
         "import torch\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -134,8 +131,7 @@
       "outputs": [],
       "source": [
         "from loader import get_dataloader\n",
-        "from unimodals.modules import GRU, MLP, Sequential, Identity\n",
-        "from fusions.modules import ConcatEarly\n",
+        "from unimodals.modules import GRU, MLP\n",
         "from training.unimodal import train, test\n",
         "from utils import get_default_device, save_results"
       ]
@@ -197,10 +193,11 @@
       "source": [
         "modality_num = 2\n",
         "\n",
-        "encoder = GRU(300, 600, dropout=True, has_padding=False,\n",
-        "              batch_first=True, last_only=True).to(device)\n",
+        "encoder = GRU(\n",
+        "    300, 600, dropout=True, has_padding=False, batch_first=True, last_only=True\n",
+        ").to(device)\n",
         "\n",
-        "head = MLP(600, 512, 1).to(device)"
+        "head = MLP(600, 512, 1).to(device)\n"
       ]
     },
     {
@@ -212,13 +209,20 @@
       "outputs": [],
       "source": [
         "train_losses, valid_losses = train(\n",
-        "    encoder, head, traindata, validdata, 500,\n",
-        "    task=\"regression\", optimtype=torch.optim.AdamW, lr=2e-3,\n",
-        "    weight_decay=0.01, criterion=torch.nn.L1Loss(),\n",
-        "    save_encoder=f'/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_encoder.pt',\n",
-        "    save_head=f'/content/Multimodal-Sentiment-Analysis/models{FILE_NAME}_head.pt',\n",
-        "    modalnum=modality_num\n",
-        ")"
+        "    encoder,\n",
+        "    head,\n",
+        "    traindata,\n",
+        "    validdata,\n",
+        "    500,\n",
+        "    task=\"regression\",\n",
+        "    optimtype=torch.optim.AdamW,\n",
+        "    lr=2e-3,\n",
+        "    weight_decay=0.01,\n",
+        "    criterion=torch.nn.L1Loss(),\n",
+        "    save_encoder=f\"/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_encoder.pt\",\n",
+        "    save_head=f\"/content/Multimodal-Sentiment-Analysis/models{FILE_NAME}_head.pt\",\n",
+        "    modalnum=modality_num,\n",
+        ")\n"
       ]
     },
     {
