--- a/src/notebooks/MOSI/Early_Fusion.ipynb
+++ b/src/notebooks/MOSI/Early_Fusion.ipynb
@@ -238,8 +238,17 @@
       "outputs": [],
       "source": [
         "encoders = [Identity().to(device), Identity().to(device), Identity().to(device)]\n",
-        "head = Sequential(GRU(409, 512, dropout=True, has_padding=False,\n",
-        "                  batch_first=True, last_only=True), MLP(512, 512, 1)).to(device)"
+        "head = Sequential(\n",
+        "    GRU(\n",
+        "        409,\n",
+        "        512,\n",
+        "        dropout=True,\n",
+        "        has_padding=False,\n",
+        "        batch_first=True,\n",
+        "        last_only=True,\n",
+        "    ),\n",
+        "    MLP(512, 512, 1),\n",
+        ").to(device)\n"
       ]
     },
     {
