--- a/src/notebooks/MOSEI/Early_Fusion.ipynb
+++ b/src/notebooks/MOSEI/Early_Fusion.ipynb
@@ -190,7 +190,7 @@
       "outputs": [],
       "source": [
         "FILE_PATH = '/content/mosei_raw.pkl'\n",
-        "train_data, valid_data, test_data = get_dataloader(FILE_PATH, max_pad=True, data_type='mosei', max_seq_len=50)"
+        "train_data, valid_data, test_data = get_dataloader(FILE_PATH, max_pad=True, max_seq_len=50)"
       ]
     },
     {
@@ -261,18 +261,6 @@
       },
       "source": [
         "## Training"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "id": "f0b5dfe9-6677-4494-a013-7343ed43b731",
-      "metadata": {
-        "id": "f0b5dfe9-6677-4494-a013-7343ed43b731"
-      },
-      "outputs": [],
-      "source": [
-        "OUTPUT_MODEL_FILE_NAME = 'MOSEI_Early_Fusion'"
       ]
     },
     {
@@ -700,6 +688,7 @@
         }
       ],
       "source": [
+        "OUTPUT_MODEL_FILE_NAME = 'MOSEI_Early_Fusion'\n",
         "train_losses, valid_losses = train(\n",
         "    encoders,\n",
         "    fusion,\n",
