--- a/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
@@ -389,12 +389,23 @@
         }
       ],
       "source": [
-        "FILE_NAME = 'mosei_eft_r0'\n",
+        "OUTPUT_MODEL_FILE_NAME = \"MOSEI_Early_Fusion_Transformer\"\n",
         "train_losses, valid_losses = train(\n",
-        "    encoders, fusion, head, train_data, valid_data, 200, task=\"regression\", optimtype=torch.optim.AdamW,\n",
-        "    is_packed=True, early_stop=True, lr=1e-4,\n",
-        "    save=f'/content/Multimodal-Sentiment-Analysis/src/models/{FILE_NAME}.pt', weight_decay=0.01, objective=torch.nn.L1Loss()\n",
-        ")"
+        "    encoders,\n",
+        "    fusion,\n",
+        "    head,\n",
+        "    train_data,\n",
+        "    valid_data,\n",
+        "    200,\n",
+        "    task=\"regression\",\n",
+        "    optimtype=torch.optim.AdamW,\n",
+        "    is_packed=True,\n",
+        "    early_stop=True,\n",
+        "    lr=1e-4,\n",
+        "    save=f\"/content/Multimodal-Sentiment-Analysis/src/models/{OUTPUT_MODEL_FILE_NAME}.pt\",\n",
+        "    weight_decay=0.01,\n",
+        "    objective=torch.nn.L1Loss(),\n",
+        ")\n"
       ]
     },
     {
@@ -450,7 +461,7 @@
       },
       "outputs": [],
       "source": [
-        "save_results(train_losses, valid_losses, f'/content/Multimodal-Sentiment-Analysis/src/results/{FILE_NAME}.pkl')"
+        "save_results(train_losses, valid_losses, f'/content/Multimodal-Sentiment-Analysis/src/results/{OUTPUT_MODEL_FILE_NAME}.pkl')"
       ]
     },
     {
@@ -495,7 +506,7 @@
       ],
       "source": [
         "model = torch.load(\n",
-        "    f\"/content/Multimodal-Sentiment-Analysis/src/models/{FILE_NAME}.pt\"\n",
+        "    f\"/content/Multimodal-Sentiment-Analysis/src/models/{OUTPUT_MODEL_FILE_NAME}.pt\"\n",
         ").to(device)\n",
         "\n",
         "test(\n",
