--- a/src/notebooks/MOSEI/Multimodal_Transformer.ipynb
+++ b/src/notebooks/MOSEI/Multimodal_Transformer.ipynb
@@ -167,9 +167,8 @@
       "outputs": [],
       "source": [
         "from loader import get_dataloader\n",
-        "from unimodals.modules import Identity, MLP\n",
+        "from unimodals.modules import Identity\n",
         "from fusions.multimodal import MULTModel\n",
-        "from fusions.modules import Concat\n",
         "from training.supervised import train, test\n",
         "from utils import get_default_device, save_results"
       ]
