--- a/src/notebooks/MOSEI/Tensor_Fusion.ipynb
+++ b/src/notebooks/MOSEI/Tensor_Fusion.ipynb
@@ -139,9 +139,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "from torch import nn\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -193,7 +190,7 @@
       "outputs": [],
       "source": [
         "FILE_PATH = '/content/mosei_senti_data.pkl'\n",
-        "train_data, valid_data, test_data = get_dataloader(FILE_PATH, data_type='mosi')"
+        "train_data, valid_data, test_data = get_dataloader(FILE_PATH)"
       ]
     },
     {
@@ -240,9 +237,11 @@
       },
       "outputs": [],
       "source": [
-        "encoders = [GRUWithLinear(35, 64, 4, dropout=True, has_padding=True).to(device),\n",
-        "            GRUWithLinear(74, 128, 19, dropout=True, has_padding=True).to(device),\n",
-        "            GRUWithLinear(300, 512, 79, dropout=True, has_padding=True).to(device)]\n",
+        "encoders = [\n",
+        "    GRUWithLinear(35, 64, 4, dropout=True, has_padding=True).to(device),\n",
+        "    GRUWithLinear(74, 128, 19, dropout=True, has_padding=True).to(device),\n",
+        "    GRUWithLinear(300, 512, 79, dropout=True, has_padding=True).to(device),\n",
+        "]\n",
         "\n",
         "head = MLP(8000, 512, 1).to(device)\n",
         "\n",
@@ -504,12 +503,21 @@
       ],
       "source": [
         "train_losses, valid_losses = train(\n",
-        "    encoders, fusion, head, train_data, valid_data, 50,\n",
-        "    task=\"regression\", optimtype=torch.optim.AdamW,\n",
-        "    early_stop=True, is_packed=True, lr=1e-3,\n",
-        "    save=f'/content/{OUTPUT_MODEL_FILE_NAME}.pt',\n",
-        "    weight_decay=0.01, objective=torch.nn.L1Loss()\n",
-        ")"
+        "    encoders,\n",
+        "    fusion,\n",
+        "    head,\n",
+        "    train_data,\n",
+        "    valid_data,\n",
+        "    50,\n",
+        "    task=\"regression\",\n",
+        "    optimtype=torch.optim.AdamW,\n",
+        "    early_stop=True,\n",
+        "    is_packed=True,\n",
+        "    lr=1e-3,\n",
+        "    save=f\"/content/{OUTPUT_MODEL_FILE_NAME}.pt\",\n",
+        "    weight_decay=0.01,\n",
+        "    objective=torch.nn.L1Loss(),\n",
+        ")\n"
       ]
     },
     {
