--- a/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
@@ -98,7 +98,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -128,7 +127,7 @@
       "outputs": [],
       "source": [
         "FILE_PATH = '/content/mosi_data.pkl'\n",
-        "train_data, valid_data, test_data = get_dataloader(FILE_PATH, data_type='mosi')"
+        "train_data, valid_data, test_data = get_dataloader(FILE_PATH)"
       ]
     },
     {
