--- a/src/notebooks/MOSI/Late_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSI/Late_Fusion_Transformer.ipynb
@@ -140,8 +140,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -193,7 +191,7 @@
       "outputs": [],
       "source": [
         "FILE_PATH = '/content/mosi_data.pkl'\n",
-        "train_data, valid_data, test_data = get_dataloader(FILE_PATH, data_type='mosi')"
+        "train_data, valid_data, test_data = get_dataloader(FILE_PATH)"
       ]
     },
     {
@@ -240,11 +238,13 @@
       },
       "outputs": [],
       "source": [
-        "encoders = [Transformer(20, 40).to(device),\n",
-        "            Transformer(5, 10).to(device),\n",
-        "            Transformer(300, 600).to(device)]\n",
+        "encoders = [\n",
+        "    Transformer(20, 40).to(device),\n",
+        "    Transformer(5, 10).to(device),\n",
+        "    Transformer(300, 600).to(device),\n",
+        "]\n",
         "head = MLP(650, 256, 1).to(device)\n",
-        "fusion = Concat().to(device)"
+        "fusion = Concat().to(device)\n"
       ]
     },
     {
