--- a/src/notebooks/MOSI/Low_Rank_Tensor_Fusion.ipynb
+++ b/src/notebooks/MOSI/Low_Rank_Tensor_Fusion.ipynb
@@ -139,9 +139,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "from torch import nn\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -192,7 +189,7 @@
       },
       "outputs": [],
       "source": [
-        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl', data_type='mosi')"
+        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl')"
       ]
     },
     {
