--- a/src/notebooks/MOSI/Tensor_Fusion.ipynb
+++ b/src/notebooks/MOSI/Tensor_Fusion.ipynb
@@ -140,9 +140,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "from torch import nn\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -193,7 +190,7 @@
       },
       "outputs": [],
       "source": [
-        "traindata, validdata, testdata = get_dataloader('/content/mosi_raw.pkl', data_type='mosi')"
+        "traindata, validdata, testdata = get_dataloader('/content/mosi_raw.pkl')"
       ]
     },
     {
