--- a/src/notebooks/MOSI/Unimodal.ipynb
+++ b/src/notebooks/MOSI/Unimodal.ipynb
@@ -145,7 +145,8 @@
       "outputs": [],
       "source": [
         "traindata, validdata, testdata = get_dataloader(\n",
-        "    '/content/mosi_raw.pkl', max_pad=True, data_type='mosi', max_seq_len=50)"
+        "    \"/content/mosi_raw.pkl\", max_pad=True, max_seq_len=50\n",
+        ")"
       ]
     },
     {
@@ -155,9 +156,7 @@
         "id": "F-ul_7Fqljbd"
       },
       "outputs": [],
-      "source": [
-        "FILE_NAME = 'mosi_uni_r0'"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
@@ -208,6 +207,7 @@
       },
       "outputs": [],
       "source": [
+        "OUTPUT_MODEL_FILE_NAME = 'MOSI_Unimodal'\n",
         "train_losses, valid_losses = train(\n",
         "    encoder,\n",
         "    head,\n",
@@ -219,8 +219,8 @@
         "    lr=2e-3,\n",
         "    weight_decay=0.01,\n",
         "    criterion=torch.nn.L1Loss(),\n",
-        "    save_encoder=f\"/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_encoder.pt\",\n",
-        "    save_head=f\"/content/Multimodal-Sentiment-Analysis/models{FILE_NAME}_head.pt\",\n",
+        "    save_encoder=f\"/content/Multimodal-Sentiment-Analysis/models/{OUTPUT_MODEL_FILE_NAME}_encoder.pt\",\n",
+        "    save_head=f\"/content/Multimodal-Sentiment-Analysis/models{OUTPUT_MODEL_FILE_NAME}_head.pt\",\n",
         "    modalnum=modality_num,\n",
         ")\n"
       ]
@@ -276,7 +276,7 @@
       },
       "outputs": [],
       "source": [
-        "save_results(train_losses, valid_losses, f'/content/Multimodal-Sentiment-Analysis/results/{FILE_NAME}.pkl')"
+        "save_results(train_losses, valid_losses, f'/content/Multimodal-Sentiment-Analysis/results/{OUTPUT_MODEL_FILE_NAME}.pkl')"
       ]
     },
     {
@@ -288,10 +288,10 @@
       "outputs": [],
       "source": [
         "encoder = torch.load(\n",
-        "    f\"/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_encoder.pt\"\n",
+        "    f\"/content/Multimodal-Sentiment-Analysis/models/{OUTPUT_MODEL_FILE_NAME}_encoder.pt\"\n",
         ").to(device)\n",
         "head = torch.load(\n",
-        "    f\"/content/Multimodal-Sentiment-Analysis/models/{FILE_NAME}_head.pt\"\n",
+        "    f\"/content/Multimodal-Sentiment-Analysis/models/{OUTPUT_MODEL_FILE_NAME}_head.pt\"\n",
         ").to(device)\n",
         "\n",
         "test(\n",
