--- a/src/notebooks/MOSI/Early_Fusion.ipynb
+++ b/src/notebooks/MOSI/Early_Fusion.ipynb
@@ -138,8 +138,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -190,7 +188,7 @@
       },
       "outputs": [],
       "source": [
-        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl', max_pad=True, data_type='mosi', max_seq_len=50)"
+        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl', max_pad=True, max_seq_len=50)"
       ]
     },
     {
