--- a/src/notebooks/MOSI/Late_Fusion.ipynb
+++ b/src/notebooks/MOSI/Late_Fusion.ipynb
@@ -139,8 +139,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -191,7 +189,7 @@
       },
       "outputs": [],
       "source": [
-        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl', data_type='mosi')"
+        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl')"
       ]
     },
     {
@@ -238,11 +236,13 @@
       },
       "outputs": [],
       "source": [
-        "encoders = [GRU(35, 70, dropout=True, has_padding=True, batch_first=True).to(device),\n",
-        "            GRU(74, 200, dropout=True, has_padding=True, batch_first=True).to(device),\n",
-        "            GRU(300, 600, dropout=True, has_padding=True, batch_first=True).to(device)]\n",
+        "encoders = [\n",
+        "    GRU(35, 70, dropout=True, has_padding=True, batch_first=True).to(device),\n",
+        "    GRU(74, 200, dropout=True, has_padding=True, batch_first=True).to(device),\n",
+        "    GRU(300, 600, dropout=True, has_padding=True, batch_first=True).to(device),\n",
+        "]\n",
         "head = MLP(870, 870, 1).to(device)\n",
-        "fusion = Concat().to(device)"
+        "fusion = Concat().to(device)\n"
       ]
     },
     {
