--- a/src/notebooks/MOSI/Multimodal_Cyclic_Translation_Network.ipynb
+++ b/src/notebooks/MOSI/Multimodal_Cyclic_Translation_Network.ipynb
@@ -193,7 +193,7 @@
       },
       "outputs": [],
       "source": [
-        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl', data_type='mosi')"
+        "train_data, valid_data, test_data = get_dataloader('/content/mosi_raw.pkl')"
       ]
     },
     {
