--- a/src/notebooks/MOSI/Multimodal_Transformer.ipynb
+++ b/src/notebooks/MOSI/Multimodal_Transformer.ipynb
@@ -141,8 +141,6 @@
       "source": [
         "import sys\n",
         "import torch\n",
-        "\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "sys.path.append('/content/Multimodal-Sentiment-Analysis/src')"
@@ -168,9 +166,8 @@
       "outputs": [],
       "source": [
         "from loader import get_dataloader\n",
-        "from unimodals.modules import Identity, MLP\n",
+        "from unimodals.modules import Identity\n",
         "from fusions.multimodal import MULTModel\n",
-        "from fusions.modules import Concat\n",
         "from training.supervised import train, test\n",
         "from utils import get_default_device, save_results"
       ]
@@ -194,7 +191,7 @@
       },
       "outputs": [],
       "source": [
-        "train_data, valid_data, test_data = get_dataloader('/content/mosi_data.pkl', data_type='mosi', max_pad=True)"
+        "train_data, valid_data, test_data = get_dataloader('/content/mosi_data.pkl', max_pad=True)"
       ]
     },
     {
