Refactors and Simplify

--- a/src/notebooks/MOSI/Multimodal_Factorization.ipynb
+++ b/src/notebooks/MOSI/Multimodal_Factorization.ipynb
@@ -257,9 +257,9 @@
         "]\n",
         "\n",
         "decoders = [\n",
-        "    TSDecoder(dim_0, 30, n_latent, timestep).to(device),\n",
-        "    TSDecoder(dim_1, 30, n_latent, timestep).to(device),\n",
-        "    TSDecoder(dim_2, 30, n_latent, timestep).to(device),\n",
+        "    TSDecoder(dim_0, n_latent, timestep).to(device),\n",
+        "    TSDecoder(dim_1, n_latent, timestep).to(device),\n",
+        "    TSDecoder(dim_2, n_latent, timestep).to(device),\n",
         "]\n",
         "\n",
         "fuse = Sequential2(Concat(), MLP(3 * n_latent, n_latent, n_latent // 2)).to(\n",
