--- a/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
@@ -400,7 +400,7 @@
         "    is_packed=True,\n",
         "    early_stop=True,\n",
         "    lr=1e-4,\n",
-        "    save=f\"/content/Multimodal-Sentiment-Analysis/src/models/{OUTPUT_MODEL_FILE_NAME}.pt\",\n",
+        "    save=f\"/content/{OUTPUT_MODEL_FILE_NAME}.pt\",\n",
         "    weight_decay=0.01,\n",
         "    objective=torch.nn.L1Loss(),\n",
         ")\n"
@@ -459,7 +459,7 @@
       },
       "outputs": [],
       "source": [
-        "save_results(train_losses, valid_losses, f'/content/Multimodal-Sentiment-Analysis/src/results/{OUTPUT_MODEL_FILE_NAME}.pkl')"
+        "save_results(train_losses, valid_losses, f'/content/{OUTPUT_MODEL_FILE_NAME}.pkl')"
       ]
     },
     {
@@ -504,7 +504,7 @@
       ],
       "source": [
         "model = torch.load(\n",
-        "    f\"/content/Multimodal-Sentiment-Analysis/src/models/{OUTPUT_MODEL_FILE_NAME}.pt\"\n",
+        "    f\"/content/{OUTPUT_MODEL_FILE_NAME}.pt\"\n",
         ").to(device)\n",
         "\n",
         "test(\n",
