--- a/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
@@ -384,7 +384,7 @@
         }
       ],
       "source": [
-        "model = torch.load(f\"/content/models/{OUTPUT_MODEL_FILE_NAME}.pt\").to(device)\n",
+        "model = torch.load(f\"/content/{OUTPUT_MODEL_FILE_NAME}.pt\").to(device)\n",
         "\n",
         "test(\n",
         "    model,\n",
