--- a/src/notebooks/MOSEI/Early_Fusion.ipynb
+++ b/src/notebooks/MOSEI/Early_Fusion.ipynb
@@ -161,9 +161,8 @@
         "import gdown\n",
         "\n",
         "file_id = \"1zFOBHijVppTiyteSsi0aTFYPEsda_AOk\"\n",
-        "destination = \"mosei_raw.pkl\"  # Name to save the file as\n",
+        "destination = \"mosei_raw.pkl\" \n",
         "\n",
-        "# Download the file\n",
         "gdown.download(\n",
         "    f\"https://drive.google.com/uc?id={file_id}\", destination, quiet=False)"
       ]
