--- a/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSEI/Early_Fusion_Transformer.ipynb
@@ -122,9 +122,8 @@
         "import gdown\n",
         "\n",
         "file_id = \"180l4pN6XAv8-OAYQ6OrMheFUMwtqUWbz\"\n",
-        "destination = \"mosei_senti_data.pkl\"  # Name to save the file as\n",
+        "destination = \"mosei_senti_data.pkl\"\n",
         "\n",
-        "# Download the file\n",
         "gdown.download(\n",
         "    f\"https://drive.google.com/uc?id={file_id}\", destination, quiet=False)"
       ]
