--- a/src/notebooks/MOSI/Late_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSI/Late_Fusion_Transformer.ipynb
@@ -110,11 +110,9 @@
       "source": [
         "import gdown\n",
         "\n",
-        "# File ID and destination\n",
         "file_id = \"1_XdzdW8UNG1TTS6QcX10uhoS6N11OBit\"\n",
-        "destination = \"mosi_data.pkl\"  # Name to save the file as\n",
+        "destination = \"mosi_data.pkl\"  \n",
         "\n",
-        "# Download the file\n",
         "gdown.download(\n",
         "    f\"https://drive.google.com/uc?id={file_id}\", destination, quiet=False)"
       ]
