--- a/src/notebooks/MOSI/Tensor_Fusion.ipynb
+++ b/src/notebooks/MOSI/Tensor_Fusion.ipynb
@@ -120,11 +120,9 @@
       "source": [
         "import gdown\n",
         "\n",
-        "# File ID and destination\n",
         "file_id = \"1szKIqO0t3Be_W91xvf6aYmsVVUa7wDHU\"\n",
-        "destination = \"mosi_raw.pkl\"  # Name to save the file as\n",
+        "destination = \"mosi_raw.pkl\"  \n",
         "\n",
-        "# Download the file\n",
         "gdown.download(\n",
         "    f\"https://drive.google.com/uc?id={file_id}\", destination, quiet=False)"
       ]
