--- a/src/notebooks/MOSEI/Early_Fusion.ipynb
+++ b/src/notebooks/MOSEI/Early_Fusion.ipynb
@@ -235,18 +235,17 @@
       "outputs": [],
       "source": [
         "encoders = [Identity().to(device), Identity().to(device), Identity().to(device)]\n",
-        "head = Sequential(GRU(1087, 1024, dropout=True, has_padding=False,batch_first=True, last_only=True), MLP(1024, 512, 1)).to(device)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "id": "63408731-2f89-4f01-b1d4-c169817fd8a8",
-      "metadata": {
-        "id": "63408731-2f89-4f01-b1d4-c169817fd8a8"
-      },
-      "outputs": [],
-      "source": [
+        "head = Sequential(\n",
+        "    GRU(\n",
+        "        1087,\n",
+        "        1024,\n",
+        "        dropout=True,\n",
+        "        has_padding=False,\n",
+        "        batch_first=True,\n",
+        "        last_only=True,\n",
+        "    ),\n",
+        "    MLP(1024, 512, 1),\n",
+        ").to(device)\n",
         "fusion = ConcatEarly().to(device)"
       ]
     },
