Remove Memory Profiler, adding Mosei Late Fusion

--- a/src/notebooks/MELD/HiTrans.ipynb
+++ b/src/notebooks/MELD/HiTrans.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "A100"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'Multimodal-Sentiment-Analysis'...\n",
             "remote: Enumerating objects: 179, done.\u001b[K\n",
@@ -49,30 +32,48 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install memory_profiler"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 250
         },
-        "id": "FbCj3YB4eC0i",
-        "outputId": "e20e0cf5-77a6-4924-d0b7-fe48a881b2e0"
+        "id": "hvlUKU2_eFrG",
+        "outputId": "f637d1de-8e64-44f7-ebb5-be08026725a5"
       },
-      "execution_count": 16,
       "outputs": [
         {
+          "name": "stderr",
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "Requirement already satisfied: memory_profiler in /usr/local/lib/python3.10/dist-packages (0.61.0)\n",
-            "Requirement already satisfied: psutil in /usr/local/lib/python3.10/dist-packages (from memory_profiler) (5.9.5)\n"
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1Ry6uh_CxKEOpP0LY-Y_tf1mV-BYwzHp6\n",
+            "To: /content/train_sent_emo.csv\n",
+            "100%|██████████| 291k/291k [00:00<00:00, 106MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1HhDkpR5Qs1ehff50WXcd7emsnxtNbplm\n",
+            "To: /content/test_sent_emo.csv\n",
+            "100%|██████████| 1.11M/1.11M [00:00<00:00, 155MB/s]\n",
+            "Downloading...\n",
+            "From: https://drive.google.com/uc?id=1s48pfb0bxEnofotkniOPdwf9uhFkEWZG\n",
+            "To: /content/dev_sent_emo.csv\n",
+            "100%|██████████| 120k/120k [00:00<00:00, 54.3MB/s]\n"
           ]
+        },
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'dev_sent_emo.csv'"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
+      ],
       "source": [
         "import gdown\n",
         "\n",
@@ -96,83 +97,26 @@
         "gdown.download(\n",
         "    f\"https://drive.google.com/uc?id={file_id}\", destination, quiet=False\n",
         ")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 250
-        },
-        "id": "hvlUKU2_eFrG",
-        "outputId": "f637d1de-8e64-44f7-ebb5-be08026725a5"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1Ry6uh_CxKEOpP0LY-Y_tf1mV-BYwzHp6\n",
-            "To: /content/train_sent_emo.csv\n",
-            "100%|██████████| 291k/291k [00:00<00:00, 106MB/s]\n",
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1HhDkpR5Qs1ehff50WXcd7emsnxtNbplm\n",
-            "To: /content/test_sent_emo.csv\n",
-            "100%|██████████| 1.11M/1.11M [00:00<00:00, 155MB/s]\n",
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1s48pfb0bxEnofotkniOPdwf9uhFkEWZG\n",
-            "To: /content/dev_sent_emo.csv\n",
-            "100%|██████████| 120k/120k [00:00<00:00, 54.3MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'dev_sent_emo.csv'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "n52ceGWWgZly"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "\n",
         "folder_path = '/content/log'\n",
         "\n",
         "os.makedirs(folder_path, exist_ok=True)"
-      ],
-      "metadata": {
-        "id": "n52ceGWWgZly"
-      },
-      "execution_count": 17,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "epochs = 25\n",
-        "train_data_path = '/content/train_sent_emo.csv'\n",
-        "test_data_path = '/content/test_sent_emo.csv'\n",
-        "valid_data_path = '/content/dev_sent_emo.csv'\n",
-        "model_save_path = '/content/model.pkl'\n",
-        "log_path = '/content/log'\n",
-        "\n",
-        "!python /content/Multimodal-Sentiment-Analysis/src/main.py \\\n",
-        "    --train_data_path={train_data_path} \\\n",
-        "    --test_data_path={test_data_path} \\\n",
-        "    --valid_data_path={valid_data_path} \\\n",
-        "    --model_save_path={model_save_path} \\\n",
-        "    --log_path={log_path} \\\n",
-        "    --epochs={epochs}"
-      ],
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,11 +124,10 @@
         "id": "dEcf8y_mSU0v",
         "outputId": "5c4f64e4-0ce3-4578-9940-77d85a8c0f6b"
       },
-      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2024-12-26 15:18:57.928839: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
             "2024-12-26 15:18:57.946244: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
@@ -277,20 +220,27 @@
             "2024-12-26 15:20:50 - [line:291] - INFO: Best Dev F1: 0.5464\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
+      ],
       "source": [
+        "epochs = 25\n",
+        "train_data_path = '/content/train_sent_emo.csv'\n",
+        "test_data_path = '/content/test_sent_emo.csv'\n",
+        "valid_data_path = '/content/dev_sent_emo.csv'\n",
+        "model_save_path = '/content/model.pkl'\n",
+        "log_path = '/content/log'\n",
+        "\n",
         "!python /content/Multimodal-Sentiment-Analysis/src/main.py \\\n",
         "    --train_data_path={train_data_path} \\\n",
         "    --test_data_path={test_data_path} \\\n",
         "    --valid_data_path={valid_data_path} \\\n",
         "    --model_save_path={model_save_path} \\\n",
         "    --log_path={log_path} \\\n",
-        "    --evaluate \\\n",
         "    --epochs={epochs}"
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -298,11 +248,10 @@
         "id": "HmNbzenKiUDQ",
         "outputId": "6fdbd3de-40e7-4fcb-fb63-ce4bb2546695"
       },
-      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2024-12-26 15:21:02.406423: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
             "2024-12-26 15:21:02.423400: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
@@ -323,7 +272,34 @@
             "2024-12-26 15:21:16 - [line:270] - INFO: Test Loss: 1.0945 F1: 0.5581\n"
           ]
         }
+      ],
+      "source": [
+        "!python /content/Multimodal-Sentiment-Analysis/src/main.py \\\n",
+        "    --train_data_path={train_data_path} \\\n",
+        "    --test_data_path={test_data_path} \\\n",
+        "    --valid_data_path={valid_data_path} \\\n",
+        "    --model_save_path={model_save_path} \\\n",
+        "    --log_path={log_path} \\\n",
+        "    --evaluate \\\n",
+        "    --epochs={epochs}"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
