--- a/src/notebooks/MOSEI/Multimodal_Cyclic_Translation_Network.ipynb
+++ b/src/notebooks/MOSEI/Multimodal_Cyclic_Translation_Network.ipynb
@@ -7,7 +7,7 @@
         "id": "49e0ad50-a2a2-4b96-b360-6ebd4ba790f6"
       },
       "source": [
-        "# Multimodal Cyclic Translation Network (MCTN) Model - MOSI"
+        "# Multimodal Cyclic Translation Network (MCTN) Model - MOSEI"
       ]
     },
     {
@@ -79,7 +79,7 @@
         "from torch import nn\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# sys.path.append('/content/Multimodal-Emotion-Recognition/src')"
+        "sys.path.append('/content/Multimodal-Emotion-Recognition/src')"
       ]
     },
     {
