--- a/src/notebooks/MOSI/Late_Fusion.ipynb
+++ b/src/notebooks/MOSI/Late_Fusion.ipynb
@@ -7,7 +7,7 @@
         "id": "067cb8f5-a1c8-40d0-8524-0b28f8e4b586"
       },
       "source": [
-        "# Late Fusion Model - CMU-MOSI Dataset"
+        "# Late Fusion Model - CMU-MOSI"
       ]
     },
     {
