--- a/src/notebooks/MOSEI/Low_Rank_Tensor_Fusion.ipynb
+++ b/src/notebooks/MOSEI/Low_Rank_Tensor_Fusion.ipynb
@@ -7,7 +7,7 @@
         "id": "067cb8f5-a1c8-40d0-8524-0b28f8e4b586"
       },
       "source": [
-        "# Low Rank Tensor Fusion Model - CMU-MOSI Dataset"
+        "# Low Rank Tensor Fusion Model - CMU-MOSEI Dataset"
       ]
     },
     {
