--- a/src/notebooks/MOSEI/Multimodal_Factorization.ipynb
+++ b/src/notebooks/MOSEI/Multimodal_Factorization.ipynb
@@ -7,7 +7,7 @@
         "id": "067cb8f5-a1c8-40d0-8524-0b28f8e4b586"
       },
       "source": [
-        "# Multimodal Factorization Model - CMU-MOSI Dataset"
+        "# Multimodal Factorization Model - CMU-MOSEI Dataset"
       ]
     },
     {
