--- a/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
+++ b/src/notebooks/MOSI/Early_Fusion_Transformer.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Early Fusion Transformer Model - CMU-MOSI Dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
