--- a/src/notebooks/MOSI/Unimodal.ipynb
+++ b/src/notebooks/MOSI/Unimodal.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Unimodal - CMU-MOSEI"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
